2015-03-23  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/65505
	* gcc.target/sh/torture/pr65505.c: New.

2015-03-23  Martin Sebor  <msebor@redhat.com>

	PR testsuite/63175
	* gcc.dg/vect/costmodel/ppc/costmodel-bb-slp-9a-pr63175.c: Scan
	assembly for lvx in addition to lxv.

2015-03-23  Jakub Jelinek  <jakub@redhat.com>

	PR target/65504
	* gfortran.dg/pr65504.f90: New test.

	PR ipa/65521
	* gcc.dg/pr65521.c: New test.

2015-03-23  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/65518
	* gcc.dg/vect/pr65518.c: New testcase.

2015-03-23  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/65494
	* gcc.dg/vect/pr65494.c: New testcase.

2015-03-23  Jakub Jelinek  <jakub@redhat.com>

	PR preprocessor/65238
	* c-c++-common/cpp/pr65238-1.c: New test.
	* gcc.dg/cpp/pr65238-2.c: New test.
	* gcc.dg/cpp/trad/pr65238-3.c: New test.
	* gcc.dg/cpp/trad/pr65238-4.c: New test.

2015-03-23  Paul Thomas  <pault@gcc.gnu.org>
	    Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/64952
	* gfortran.dg/elemental_dependency_4.f90: New.
	* gfortran.dg/elemental_dependency_5.f90: New.

2015-03-22  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65475
	* g++.dg/lto/pr65475b_0.C: New testcase.
	* g++.dg/lto/pr65475b_1.C: New testcase.
	* g++.dg/lto/pr65475c_0.C: New testcase.
	* g++.dg/lto/pr65475c_1.C: New testcase.

2015-03-21  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray_38.f90: New.
	* gfortran.dg/coarray_39.f90: New.
	* gfortran.dg/coarray/coindexed_3.f90: Add dg-error, turn into
	compile test.

2015-03-20  Marek Polacek  <polacek@redhat.com>

	PR c++/65398
	* g++.dg/cpp0x/pr65398.C: New test.

2015-03-20  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65475
	* g++.dg/lto/pr65475_0.C: New testcase.
	* g++.dg/lto/pr65475_1.C: New testcase.

2015-03-20  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/64366
	* gcc.target/sh/pr64366.c: New.

2015-03-20  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/48324
	* g++.dg/cpp0x/constexpr-48324.C: New.
