@@ -1,5 +1,5 @@
 /* { dg-lto-do link } */
-/* { dg-options "-O2  -Wno-odr" } */
+/* { dg-lto-options "-O2  -Wno-odr" } */
 /* { dg-extra-ld-options { -O2 -Wno-odr -r -nostdlib } } */
 namespace std {
 class exception {};
