@@ -1,3 +1,10 @@
+2015-03-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR ipa/65475
+	* g++.dg/lto/pr65475_0.C: Use dg-lto-options instead of
+	dg-options.
+	* g++.dg/lto/pr65475b_0.C: Likewise.
+
 2015-03-23  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	PR target/65505
